--- a/components/header.html
+++ b/components/header.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <div>
+            <div><img src="#" alt="#"></div>
+            <a href="#">Home</a>
+            <a href="#">Shop</a>
+            <a href="#">Contact Us</a>
+            <a href="#">About Us</a>
+        </div>
+    </nav>
 </body>
 </html>
